--- a/index.html
+++ b/index.html
@@ -11,12 +11,18 @@
         <div class="wrapper_1">
             <header>
                 <div class="bio">
-                    <div class="photo">
-                        <img src="" alt="photoLebedev">
+                    <div>
+                        <img class="photo" src="wHaXS9ZqHZc.jpg" alt="photoLebedev">
+                    </div>
+                    <div class="bio_prof">
+                    <div class="name">Lebedev Matvey</div>
+                    <div class="prof">Junior Frontend Developer.</div>
                     </div>
                 </div>
             </header>
+            <hr>
+            <hr>
         </div>
     </div>
 </body>
-</html>
+</html> 
