feat: add main and footer

--- a/index.html
+++ b/index.html
@@ -91,15 +91,28 @@
                         <p>Language: English (A2)</p>
                     </div>
             </main>
+            <hr>
             <footer>
-                <div>Contacts</div>
+                <div class="footer">
+                <div>
+                    <h2>Contacts:</h2>
+                </div>
                 <ul>
                     <li>Adress: Moscow</li>
                     <li>Phone: 8 (999) 852-91-09</li>
                     <li>Email: matvey.swansii@gmail.com</li>
-                    <li>GitHub: <a href="https://github.com/swansii1">Swansii1</a></li>
-                    <li>Telegram: <a href="https://t.me/swansii">@swansii</a></li>
+                    <li>GitHub: <a href="https://github.com/swansii1"> Swansii1</a></li>
+                    <li>Telegram: <a href="https://t.me/swansii"> @swansii</a></li>
                 </ul>
+                </div>
+                <div class="logo">
+                    <div>
+                        <a href="https://rs.school/js/" target="_blank"><img class="rsApp" src="EDO0GXBXYAATMFU.png" alt="logoSchool"></a>
+                    </div>
+                    <div>
+                        <p class="est">EST: 04.04.2024</p>
+                    </div>
+                </div>
             </footer>
           </div>
         </div>
