--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                         str = str.toLowerCase()
                         var alp = "zqxjkvbpygfwmucldrhsnioate";
                         alp.split('')
-                        for (let i = 0; i < alp.length; i++){
-                          if (str.indexOf(alp[i]) < 0){
+                        for (let i = 0; i &lt; alp.length; i++){
+                          if (str.indexOf(alp[i]) &lt; 0){
                             return false;
                           }
                         }
@@ -63,7 +63,7 @@
                       }</code>
                     <code>var capitals = function (word) {
                         let arr = [];
-                      for (let i = 0; i < word.length; i++){
+                      for (let i = 0; i &lt; word.length; i++){
                         if (word[i].toUpperCase() == word[i]) arr.push(i);
                       }
                       return arr;
